alteração no nome

--- a/Site Açai/inedx.html
+++ b/Site Açai/inedx.html
@@ -16,7 +16,7 @@
       </div>
       <ul>
         <li>
-            <a href = "#">VER MENU</a>
+            <a href = "#">FAÇA SEU PEDIDO</a>
         </li>
         <li>
             <a href="#">MEUS PEDIDOS</a>
