--- a/Site Açai/facaseupedido.html
+++ b/Site Açai/facaseupedido.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>Document</title>
+  <title>Açai Shake Fast</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <div>
-    <a>Valor:</a>
-    <a>Menu</a>
+  <div id="teste">
+      <div id="teste2">
+        <a>Valor:</a>
+        <a>Menu</a>
+      </div>
     <ul>
         <li>
-            <a href ="#">Menu</a>
+            <a href ="#">Cupuaçu</a>
         </li>
         <li>
             <a href="#">Açai Puro</a>
@@ -22,6 +25,10 @@
         <li>
             <a href="#" >Milk shake</a>
         </li>
+        <li>
+            <a href="./inedx.html" >Volta para o Home</a>
+        </li>
+        
       </ul>
   </div>
 
