--- a/Curso RockSeat/Meu primeiro Projeto/index.html
+++ b/Curso RockSeat/Meu primeiro Projeto/index.html
@@ -54,5 +54,9 @@
             </section>
         </main>
     </div>
+    <footer>
+        Feito com 
+        <img src="assets/coracao.svg" alt="coracao"> pela <a href="https://rocketseat.com.br">Rocketseat</a>
+    </footer>
 </body>
 </html>
